added css ofthe project

--- a/index.html
+++ b/index.html
@@ -117,11 +117,7 @@
             <li class="forcast-everyday">
               <div class="week-day details">Saturday</div>
               <div class="date details">May, 21</div>
-              <img
-                src="images/cloudy-day.png"
-                alt="cloud-sun"
-                class="details"
-              />
+              <img src="" alt="" class="details" />
               <div class="day-temp details">
                 <span class="tempValue">21</span>
                 <span class="measureSystem">°C</span>
