--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
         <div class="col-xs-12 col-md-5">
           <h1></h1>
           <div class="row row-cols-2">
-            <div class="col-6 current-date">Friday, May 20</div>
-            <div class="col-6 current-time">18:45</div>
+            <div class="col-6 current-date"></div>
+            <div class="col-6 current-time"></div>
             <div class="col-8">
               <div class="current-temp">
                 <span class="tempValue"></span>
@@ -96,11 +96,7 @@
               </ul>
             </div>
             <div class="col-4">
-              <img
-                src="images/cloudy-day.png"
-                alt="cloud-sun"
-                class="central-img"
-              />
+              <img src="" alt="" class="central-img" />
               <div class="change-system">
                 <span> <a href="#" id="celsiusLink">°C</a></span> /
                 <span class="fahrenheit">
@@ -110,8 +106,8 @@
               <div id="description"></div>
             </div>
           </div>
-          <div class="row"></div>
         </div>
+
         <div class="col-xs-12 col-md-7">
           <ul class="forecast-calendar">
             <li class="forcast-everyday">
@@ -130,11 +126,7 @@
             <li class="forcast-everyday">
               <div class="week-day details">Sunday</div>
               <div class="date details">May, 22</div>
-              <img
-                src="images/cloudy-day.png"
-                alt="cloud-sun"
-                class="details"
-              />
+              <img src="" alt="" class="details" />
               <div class="day-temp details">
                 <span class="tempValue">20</span>
                 <span class="measureSystem">°C</span>
@@ -147,7 +139,7 @@
             <li class="forcast-everyday">
               <div class="week-day details">Monday</div>
               <div class="date details">May, 23</div>
-              <img src="images/cloud.png" alt="cloud" class="details" />
+              <img src="" alt="" class="details" />
               <div class="day-temp details">
                 <span class="tempValue">18</span>
                 <span class="measureSystem">°C</span>
@@ -160,7 +152,7 @@
             <li class="forcast-everyday">
               <div class="week-day details">Tuesday</div>
               <div class="date details">May, 24</div>
-              <img src="images/cloud.png" alt="cloud" class="details" />
+              <img src="" alt="" class="details" />
               <div class="day-temp details">
                 <span class="tempValue">21</span>
                 <span class="measureSystem">°C</span>
@@ -173,7 +165,7 @@
             <li class="forcast-everyday">
               <div class="week-day details">Wednesday</div>
               <div class="date details">May, 25</div>
-              <img src="images/rainy.png" alt="rainy" class="details" />
+              <img src="" alt="" class="details" />
               <div class="day-temp details">
                 <span class="tempValue">20</span>
                 <span class="measureSystem">°C</span>
@@ -186,7 +178,7 @@
             <li class="forcast-everyday">
               <div class="week-day details">Thursday</div>
               <div class="date details">May, 26</div>
-              <img src="images/rainy.png" alt="rainy" class="details" />
+              <img src="" alt="" class="details" />
               <div class="day-temp details">
                 <span class="tempValue">20</span>
                 <span class="measureSystem">°C</span>
