added author of the code

--- a/index.html
+++ b/index.html
@@ -191,6 +191,12 @@
           </ul>
         </div>
       </div>
+      <small
+        >This project is coded by
+        <a href="#" target="_blank">Olena Marchuk</a> and is
+        <a href="#" target="_blank">open-sourced on GitHub</a> and
+        <a href="#" target="_blank">hosted on Netlify</a>
+      </small>
     </div>
     <script src="src/index.js"></script>
   </body>
