added text-decoration of the link

--- a/index.html
+++ b/index.html
@@ -193,9 +193,26 @@
       </div>
       <small
         >This project is coded by
-        <a href="#" target="_blank">Olena Marchuk</a> and is
-        <a href="#" target="_blank">open-sourced on GitHub</a> and
-        <a href="#" target="_blank">hosted on Netlify</a>
+        <a
+          href="https://www.shecodes.io/students/722-olena-marchuk"
+          target="_blank"
+          class="author-link"
+          >Olena Marchuk</a
+        >
+        and is
+        <a
+          href="https://github.com/OlenaMarchuk/Vanilla-Weather-App"
+          target="_blank"
+          class="author-link"
+          >open-sourced on GitHub</a
+        >
+        and
+        <a
+          href="https://dreamy-taiyaki-18a741.netlify.app/"
+          target="_blank"
+          class="author-link"
+          >hosted on Netlify</a
+        >
       </small>
     </div>
     <script src="src/index.js"></script>
