edited the footer

--- a/index.html
+++ b/index.html
@@ -191,8 +191,8 @@
           </ul>
         </div>
       </div>
-      <small
-        >This project is coded by
+      <footer></footer>
+        This project is coded by
         <a
           href="https://www.shecodes.io/students/722-olena-marchuk"
           target="_blank"
@@ -213,7 +213,7 @@
           class="author-link"
           >hosted on Netlify</a
         >
-      </small>
+      </footer>
     </div>
     <script src="src/index.js"></script>
   </body>
