edited the style of main info

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
           </ul>
         </div>
       </div>
-      <footer></footer>
+      <footer>
         This project is coded by
         <a
           href="https://www.shecodes.io/students/722-olena-marchuk"
