added switch measure system

--- a/index.html
+++ b/index.html
@@ -66,8 +66,9 @@
               <div>
                 <span class="tempValue current-temp"></span>
                 <span class="measureSystem switch-measure-system"
-                  ><a href="#" id="celsiusLink">°C</a>/<a
+                  ><a href="#" class="active" id="celsiusLink">°C</a>/<a
                     href="#"
+                    class="disactive"
                     id="fahrenheitLink"
                     >°F</a
                   ></span
