added converting or the min and max current temp

--- a/index.html
+++ b/index.html
@@ -78,12 +78,12 @@
                 <div class="col-4 current-night-temp">
                   min
                   <span id="minTemp"></span>
-                  °C
+                  <span class="measure-icon">°C</span>
                 </div>
                 <div class="col-4 current-day-temp">
                   max
                   <span id="maxTemp"></span>
-                  °C
+                  <span class="measure-icon">°C</span>
                 </div>
               </div>
               <ul class="aditional-info">
