added forecast HTML-element in JS

--- a/index.html
+++ b/index.html
@@ -105,89 +105,7 @@
             </div>
           </div>
         </div>
-
-        <div class="col-xs-12 col-md-7">
-          <ul class="forecast-calendar">
-            <li class="forcast-everyday">
-              <div class="week-day details">Saturday</div>
-              <div class="date details">May, 21</div>
-              <img src="" alt="" class="details" />
-              <div class="day-temp details">
-                <span class="tempValue">21</span>
-                <span class="measureSystem">°C</span>
-              </div>
-              <div class="night-temp details">
-                <span class="tempValue">15</span>
-                <span class="measureSystem">°C</span>
-              </div>
-            </li>
-            <li class="forcast-everyday">
-              <div class="week-day details">Sunday</div>
-              <div class="date details">May, 22</div>
-              <img src="" alt="" class="details" />
-              <div class="day-temp details">
-                <span class="tempValue">20</span>
-                <span class="measureSystem">°C</span>
-              </div>
-              <div class="night-temp details">
-                <span class="tempValue">14</span>
-                <span class="measureSystem">°C</span>
-              </div>
-            </li>
-            <li class="forcast-everyday">
-              <div class="week-day details">Monday</div>
-              <div class="date details">May, 23</div>
-              <img src="" alt="" class="details" />
-              <div class="day-temp details">
-                <span class="tempValue">18</span>
-                <span class="measureSystem">°C</span>
-              </div>
-              <div class="night-temp details">
-                <span class="tempValue">13</span>
-                <span class="measureSystem">°C</span>
-              </div>
-            </li>
-            <li class="forcast-everyday">
-              <div class="week-day details">Tuesday</div>
-              <div class="date details">May, 24</div>
-              <img src="" alt="" class="details" />
-              <div class="day-temp details">
-                <span class="tempValue">21</span>
-                <span class="measureSystem">°C</span>
-              </div>
-              <div class="night-temp details">
-                <span class="tempValue">16</span>
-                <span class="measureSystem">°C</span>
-              </div>
-            </li>
-            <li class="forcast-everyday">
-              <div class="week-day details">Wednesday</div>
-              <div class="date details">May, 25</div>
-              <img src="" alt="" class="details" />
-              <div class="day-temp details">
-                <span class="tempValue">20</span>
-                <span class="measureSystem">°C</span>
-              </div>
-              <div class="night-temp details">
-                <span class="tempValue">16</span>
-                <span class="measureSystem">°C</span>
-              </div>
-            </li>
-            <li class="forcast-everyday">
-              <div class="week-day details">Thursday</div>
-              <div class="date details">May, 26</div>
-              <img src="" alt="" class="details" />
-              <div class="day-temp details">
-                <span class="tempValue">20</span>
-                <span class="measureSystem">°C</span>
-              </div>
-              <div class="night-temp details">
-                <span class="tempValue">16</span>
-                <span class="measureSystem">°C</span>
-              </div>
-            </li>
-          </ul>
-        </div>
+        <div class="col-xs-12 col-md-7" id="forecast"></div>
       </div>
       <footer>
         This project is coded by
