removed converting to Fahrenheit system

--- a/index.html
+++ b/index.html
@@ -65,25 +65,18 @@
             <div class="col-8">
               <div>
                 <span class="tempValue current-temp"></span>
-                <span class="measureSystem switch-measure-system"
-                  ><a href="#" class="active" id="celsiusLink">°C</a>/<a
-                    href="#"
-                    class="disactive"
-                    id="fahrenheitLink"
-                    >°F</a
-                  ></span
-                >
+                <span class="measureSystem switch-measure-system">°C</span>
               </div>
               <div class="row day-night-temp">
                 <div class="col-4 current-night-temp">
                   min
                   <span id="minTemp"></span>
-                  <span class="measure-icon">°C</span>
+                  <span class="measure-icon">°</span>
                 </div>
                 <div class="col-4 current-day-temp">
                   max
                   <span id="maxTemp"></span>
-                  <span class="measure-icon">°C</span>
+                  <span class="measure-icon">°</span>
                 </div>
               </div>
               <ul class="aditional-info">
