added functions to submit the main cities

--- a/index.html
+++ b/index.html
@@ -44,15 +44,15 @@
         <div class="col-xs-12 col-md-6 main-city">
           <div class="row">
             <div class="col kyiv">
-              <a href="#" class="kyiv">KYIV</a>
+              <a href="#" id="kyiv">KYIV</a>
             </div>
             <div class="col london">
-              <a href="#" class="london">LONDON </a>
+              <a href="#" id="london">LONDON </a>
             </div>
             <div class="col new-york">
-              <a href="#" class="new-york">NEW YORK</a>
+              <a href="#" id="new-york">NEW YORK</a>
             </div>
-            <div class="col tokio"><a href="#" class="tokio">TOKIO</a></div>
+            <div class="col tokio"><a href="#" id="tokio">TOKYO</a></div>
           </div>
         </div>
       </div>
